--- a/style.css
+++ b/style.css
@@ -46,12 +46,12 @@ p {
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
-  color: #323b49;
+  color: #8c8e92;
 }
 
 a {
   text-decoration: none;
-  color: #323b49;
+  color: #777f8b;
 }
 
 ul {
@@ -90,7 +90,7 @@ img {
   transform: scale(1.1);
 }
 
-.pt-116{
+.pt-116 {
   padding-top: 116px;
 }
 
@@ -106,7 +106,7 @@ img {
   padding: 50px 0;
 }
 
-.banner{
+.banner {
   padding: 158px 0 200px 0;
   display: flex;
   justify-content: center;
@@ -114,6 +114,48 @@ img {
   text-align: center;
 }
 
-.banner .btn-primary{
+.banner .btn-primary {
   margin-top: 50px;
 }
+
+/* action-section */
+
+.action-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.action-section .section-detail {
+  margin: 23px 0;
+  font-size: 24px;
+}
+
+.action-img {
+  width: 403px;
+  height: 328px;
+  border-radius: 48px;
+  overflow: hidden;
+}
+
+/* user-section  */
+.user-section {
+  background: #4e47ff1a;
+  padding: 50px 80px;
+  border-radius: 24px;
+  text-align: center;
+}
+
+.user-container{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+.user-heading{
+  font-size: 80px;
+  color: #4e47ff;
+  font-family: "Inter", sans-serif;
+
+}
+
+
