--- a/style.css
+++ b/style.css
@@ -94,8 +94,6 @@ img {
   padding-top: 116px;
 }
 
-
-
 /* header-section */
 
 .header {
@@ -148,78 +146,85 @@ img {
   text-align: center;
 }
 
-.user-container{
+.user-container {
   display: flex;
   justify-content: space-between;
   margin-top: 40px;
 }
-.user-heading{
+.user-heading {
   font-size: 80px;
   color: #4e47ff;
   font-family: "Inter", sans-serif;
-
 }
 
+input,
+textarea {
+  width: 100%;
+  outline: none;
+}
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
 
 /* review */
 
-.review-section{
+.review-section {
   text-align: center;
 }
 
-.review-container{
+.review-container {
   display: flex;
   justify-content: space-between;
   gap: 20px;
   margin-top: 50px;
 }
 
-.review-item{
-  border: 1px solid #F2EDED;
+.review-item {
+  border: 1px solid #f2eded;
   border-radius: 24px;
   padding: 24px;
   text-align: left;
 }
 
-.review-stars{
+.review-stars {
   display: flex;
   align-items: center;
   gap: 4px;
 }
 
-.review-content{
+.review-content {
   margin: 24px 0;
-
 }
-.review-heading{
+.review-heading {
   margin-bottom: 8px;
 }
 
-.review-author{
+.review-author {
   display: flex;
   align-items: center;
   gap: 12px;
 }
 
-.author-img{
+.author-img {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   overflow: hidden;
 }
 
-
 /* template-section */
 
-.section-head{
+.section-head {
   text-align: center;
 }
 
-.template-section .section-detail{
+.template-section .section-detail {
   margin: 23px 0;
 }
 
-.template-img{
+.template-img {
   border-radius: 48px;
   overflow: hidden;
   margin-top: 20px;
@@ -227,12 +232,72 @@ img {
 
 /* mewsletter-section */
 
-.newsletter-section{
+.newsletter-section {
   display: flex;
-  justify-content: space-between;
+  gap: 100px;
   align-items: center;
 }
 
-.newsletter-section.section-detail{
-font-size: 97px;
+.newsletter-content {
+  flex-basis: 50%;
 }
+
+.newsletter-section .section-title {
+  font-size: 97px;
+}
+
+.newsletter-form {
+  flex-basis: 50%;
+}
+.form-item {
+  margin-bottom: 20px;
+}
+
+.form-title {
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 8px;
+  display: inline-block;
+}
+.form-input {
+  width: 100%;
+  padding: 20px 32px;
+  border: 1px solid #f2eded;
+  border-radius: 10px;
+  color: #8c8e92;
+  font-size: 18px;
+}
+
+.newsletter-form .btn-primary {
+  width: 100%;
+}
+
+/* footer-section */
+.footer {
+  padding: 104px 0;
+  background: #ffffff;
+}
+
+.footer-logo {
+  width: 291px;
+  height: 121px;
+  margin-bottom: 16px;
+}
+/* .footer-logo img{
+  height: 100%;
+  width: 100%;
+} */
+.footer-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.footer-content {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.footer-nav
